[package]
name = "punktimel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
thiserror = "1"
serde_json = "1.0"
[dev-dependencies]
wasm-bindgen-test = "0.3"
